# avr-c-boilerplate

./: .gitignore  CMakeLists.txt  Makefile  README.md  avr-c-bp.pro  main.c  style.astylerc
lib/: adc.c  adc.h  calc.h  iopins.c  iopins.h  spi.c  spi.h  usart.c  usart.h
